2015-06-11  Anders Carlsson  <andersca@apple.com>

        Get rid of WebOriginDataManager
        https://bugs.webkit.org/show_bug.cgi?id=145896

        Reviewed by Andreas Kling.

        * DatabaseProcess/DatabaseProcess.cpp:
        (WebKit::DatabaseProcess::DatabaseProcess): Deleted.
        (WebKit::DatabaseProcess::getOrigins): Deleted.
        (WebKit::DatabaseProcess::deleteEntriesForOrigin): Deleted.
        (WebKit::DatabaseProcess::deleteEntriesModifiedBetweenDates): Deleted.
        (WebKit::DatabaseProcess::deleteAllEntries): Deleted.
        * DatabaseProcess/DatabaseProcess.h:
        * DerivedSources.make:
        * UIProcess/API/C/WKAPICast.h:
        * UIProcess/API/C/WKContext.cpp:
        * UIProcess/Databases/DatabaseProcessProxy.cpp:
        (WebKit::DatabaseProcessProxy::didReceiveMessage): Deleted.
        * UIProcess/WebOriginDataManagerProxy.cpp: Removed.
        (WebKit::WebOriginDataManagerProxy::supplementName): Deleted.
        (WebKit::WebOriginDataManagerProxy::create): Deleted.
        (WebKit::WebOriginDataManagerProxy::WebOriginDataManagerProxy): Deleted.
        (WebKit::WebOriginDataManagerProxy::~WebOriginDataManagerProxy): Deleted.
        (WebKit::WebOriginDataManagerProxy::processPoolDestroyed): Deleted.
        (WebKit::WebOriginDataManagerProxy::processDidClose): Deleted.
        (WebKit::WebOriginDataManagerProxy::shouldTerminate): Deleted.
        (WebKit::WebOriginDataManagerProxy::refWebContextSupplement): Deleted.
        (WebKit::WebOriginDataManagerProxy::derefWebContextSupplement): Deleted.
        (WebKit::CallbackSynchronizer::create): Deleted.
        (WebKit::CallbackSynchronizer::~CallbackSynchronizer): Deleted.
        (WebKit::CallbackSynchronizer::taskStarted): Deleted.
        (WebKit::CallbackSynchronizer::taskCompleted): Deleted.
        (WebKit::CallbackSynchronizer::CallbackSynchronizer): Deleted.
        (WebKit::createSynchronizedCallback): Deleted.